Kubernetes/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: two-tier-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: domain.com  # You can use this hostname locally
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: two-tier-app-service
            port:
              number: 80
